--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h3>Velocity Exotics</h3>
             </section>
             <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Inventory</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -178,7 +178,7 @@
             <section class="footer-column">
                 <h4>Velocity Motors</h4>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Inventory</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -194,10 +194,10 @@
             <section class="footer-column">
                 <h4>Follow US</h4>
                 <article class="social-links">
-                    <a href=“#”><i class="fab fa-facebook-f"></i></a>
-                    <a href=“#”><i class="fab fa-instagram"></i></a>
-                    <a href=“#”><i class="fab fa-twitter"></i></a>
-                    <a href=“#”><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
                 </article>
             </section>
             <section class="footer-column">
